--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import './styles/tailwind.scss';
+@import './styles/overrides.scss';
 @import './styles/fonts.scss';
 @import './styles/theme.scss';
